syntax = "proto3";

package com.sitewhere.grpc.service;

option java_multiple_files = true;
option java_package = "com.sitewhere.grpc.service";
option java_outer_classname = "DeviceEventServices";

import "sitewhere-common.proto";
import "device-event-model.proto";

// Device event management APIs.
service DeviceEventManagement {

	// ####################
	// ### BATCH EVENTS ###
	// ####################
	
	// Add a batch of device events.
	rpc AddDeviceEventBatch (GAddDeviceEventBatchRequest) returns (GAddDeviceEventBatchResponse) {}

	// ######################
	// ### GENERIC EVENTS ###
	// ######################
	
	// Get an event by unique id.
	rpc GetDeviceEventById (GGetDeviceEventByIdRequest) returns (GGetDeviceEventByIdResponse) {}
	
	// Get an event by alternate id.
	rpc GetDeviceEventByAlternateId (GGetDeviceEventByAlternateIdRequest) returns (GGetDeviceEventByAlternateIdResponse) {}

	// ####################
	// ### MEASUREMENTS ###
	// ####################
	
	// Add measurements.
	rpc AddMeasurements (GAddMeasurementsRequest) returns (GAddMeasurementsResponse) {}
	
	// List measurements for an index.
	rpc ListMeasurementsForIndex (GListMeasurementsForIndexRequest) returns (GListMeasurementsForIndexResponse) {}

	// #################
	// ### LOCATIONS ###
	// #################
	
	// Add locations.
	rpc AddLocations (GAddLocationsRequest) returns (GAddLocationsResponse) {}
	
	// List locations for an index.
	rpc ListLocationsForIndex (GListLocationsForIndexRequest) returns (GListLocationsForIndexResponse) {}

	// ##############
	// ### ALERTS ###
	// ##############
	
	// Add alerts.
	rpc AddAlerts (GAddAlertsRequest) returns (GAddAlertsResponse) {}
	
	// List alerts for an index.
	rpc ListAlertsForIndex (GListAlertsForIndexRequest) returns (GListAlertsForIndexResponse) {}

	// ###########################
	// ### COMMAND INVOCATIONS ###
	// ###########################
	
	// Add command invocations.
	rpc AddCommandInvocations (GAddCommandInvocationsRequest) returns (GAddCommandInvocationsResponse) {}
	
	// List command invocations for an index.
	rpc ListCommandInvocationsForIndex (GListCommandInvocationsForIndexRequest) returns (GListCommandInvocationsForIndexResponse) {}

	// #########################
	// ### COMMAND RESPONSES ###
	// #########################
	
	// Add command responses.
	rpc AddCommandResponses (GAddCommandResponsesRequest) returns (GAddCommandResponsesResponse) {}
	
	// List command responses for a command invocation.
	rpc ListCommandResponsesForInvocation (GListCommandResponsesForInvocationRequest) returns (GListCommandResponsesForInvocationResponse) {}
	
	// List command responses for an index.
	rpc ListCommandResponsesForIndex (GListCommandResponsesForIndexRequest) returns (GListCommandResponsesForIndexResponse) {}
	
	// #####################
	// ### STATE CHANGES ###
	// #####################
	
	// Add state changes.
	rpc AddStateChanges (GAddStateChangesRequest) returns (GAddStateChangesResponse) {}
	
	// List state changes for an index.
	rpc ListStateChangesForIndex (GListStateChangesForIndexRequest) returns (GListStateChangesForIndexResponse) {}
}

// ####################
// ### BATCH EVENTS ###
// ####################
	
// Request for adding a batch of device events.
message GAddDeviceEventBatchRequest {
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 1;
	com.sitewhere.grpc.model.GDeviceEventBatchCreateRequest request = 2;
}

// Response for adding a batch of device events.
message GAddDeviceEventBatchResponse {
	com.sitewhere.grpc.model.GDeviceEventBatchResponse response = 1;
}

// ######################
// ### GENERIC EVENTS ###
// ######################
	
// Request for getting an event by id.
message GGetDeviceEventByIdRequest {
	com.sitewhere.grpc.model.GUUID eventId = 1;
}

// Response for getting an event by id.
message GGetDeviceEventByIdResponse {
	com.sitewhere.grpc.model.GAnyDeviceEvent event = 1;
}
	
// Request for getting an event by alternate id.
message GGetDeviceEventByAlternateIdRequest {
	string alternateId = 1;
}

// Response for getting an event by alternate id.
message GGetDeviceEventByAlternateIdResponse {
	com.sitewhere.grpc.model.GAnyDeviceEvent event = 1;
}

// ####################
// ### MEASUREMENTS ###
// ####################
	
// Request for adding measurements.
message GAddMeasurementsRequest {
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 1;
	repeated com.sitewhere.grpc.model.GDeviceMeasurementCreateRequest requests = 2;
}
	
// Response for adding measurements.
message GAddMeasurementsResponse {
	repeated com.sitewhere.grpc.model.GDeviceMeasurement measurements = 1;
}
	
// Request for list of measurements.
message GListMeasurementsForIndexRequest {
	com.sitewhere.grpc.model.GDeviceEventIndex index = 1;
	repeated com.sitewhere.grpc.model.GUUID entityIds = 2;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 3;
}
	
// Response for list of measurements.
message GListMeasurementsForIndexResponse {
	com.sitewhere.grpc.model.GDeviceMeasurementSearchResults results = 1;
}

// #################
// ### LOCATIONS ###
// #################
	
// Request for adding locations.
message GAddLocationsRequest {
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 1;
	repeated com.sitewhere.grpc.model.GDeviceLocationCreateRequest requests = 2;
}
	
// Response for adding locations.
message GAddLocationsResponse {
	repeated com.sitewhere.grpc.model.GDeviceLocation locations = 1;
}
	
// Request for list of locations.
message GListLocationsForIndexRequest {
	com.sitewhere.grpc.model.GDeviceEventIndex index = 1;
	repeated com.sitewhere.grpc.model.GUUID entityIds = 2;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 3;
}
	
// Response for list of locations.
message GListLocationsForIndexResponse {
	com.sitewhere.grpc.model.GDeviceLocationSearchResults results = 1;
}

// ##############
// ### ALERTS ###
// ##############
	
// Request for adding alerts.
message GAddAlertsRequest {
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 1;
	repeated com.sitewhere.grpc.model.GDeviceAlertCreateRequest requests = 2;
}
	
// Response for adding alerts.
message GAddAlertsResponse {
	repeated com.sitewhere.grpc.model.GDeviceAlert alerts = 1;
}
	
// Request for list of alerts.
message GListAlertsForIndexRequest {
	com.sitewhere.grpc.model.GDeviceEventIndex index = 1;
	repeated com.sitewhere.grpc.model.GUUID entityIds = 2;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 3;
}

// Response for list of alerts.
message GListAlertsForIndexResponse {
	com.sitewhere.grpc.model.GDeviceAlertSearchResults results = 1;
}

// ###########################
// ### COMMAND INVOCATIONS ###
// ###########################
	
// Request for adding command invocations.
message GAddCommandInvocationsRequest {
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 1;
	repeated com.sitewhere.grpc.model.GDeviceCommandInvocationCreateRequest requests = 2;
}
	
// Response for adding command invocations.
message GAddCommandInvocationsResponse {
	repeated com.sitewhere.grpc.model.GDeviceCommandInvocation invocations = 1;
}
	
// Request for list of command invocations for one or more assignments.
message GListCommandInvocationsForIndexRequest {
	com.sitewhere.grpc.model.GDeviceEventIndex index = 1;
	repeated com.sitewhere.grpc.model.GUUID entityIds = 2;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 3;
}

// Response for list of command invocations for one or more assignments.
message GListCommandInvocationsForIndexResponse {
	com.sitewhere.grpc.model.GDeviceCommandInvocationSearchResults results = 1;
}

// #########################
// ### COMMAND RESPONSES ###
// #########################
	
// Request for adding command responses.
message GAddCommandResponsesRequest {
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 1;
	repeated com.sitewhere.grpc.model.GDeviceCommandResponseCreateRequest requests = 2;
}
	
// Response for adding command responses.
message GAddCommandResponsesResponse {
	repeated com.sitewhere.grpc.model.GDeviceCommandResponse responses = 1;
}
		
// Request for list of command responses for an invocation.
message GListCommandResponsesForInvocationRequest {
	com.sitewhere.grpc.model.GUUID invocationEventId = 1;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 4;
}

// Response for list of command responses for an invocation.
message GListCommandResponsesForInvocationResponse {
	com.sitewhere.grpc.model.GDeviceCommandResponseSearchResults results = 1;
}
	
// Request for list of command responses.
message GListCommandResponsesForIndexRequest {
	com.sitewhere.grpc.model.GDeviceEventIndex index = 1;
	repeated com.sitewhere.grpc.model.GUUID entityIds = 2;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 3;
}

// Response for list of command responses.
message GListCommandResponsesForIndexResponse {
	com.sitewhere.grpc.model.GDeviceCommandResponseSearchResults results = 1;
}

// #####################
// ### STATE CHANGES ###
// #####################
	
// Request for adding state changes.
message GAddStateChangesRequest {
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 1;
	repeated com.sitewhere.grpc.model.GDeviceStateChangeCreateRequest requests = 2;
}
	
// Response for adding state changes.
message GAddStateChangesResponse {
	repeated com.sitewhere.grpc.model.GDeviceStateChange stateChanges = 1;
}
	
// Request for list of state changes.
message GListStateChangesForIndexRequest {
	com.sitewhere.grpc.model.GDeviceEventIndex index = 1;
	repeated com.sitewhere.grpc.model.GUUID entityIds = 2;
	com.sitewhere.grpc.model.GDateRangeSearchCriteria criteria = 3;
}

// Response for list of state changes.
message GListStateChangesForIndexResponse {
	com.sitewhere.grpc.model.GDeviceStateChangeSearchResults results = 1;
}
